--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,13 @@
+# ports:
+#   - port: 3000
+#     onOpen: open-preview
+# tasks:
+#   - before: if [[ -z "$experiment" ]]; then cd playground/1st-proof-of-concept; else cd playground/$experiment; fi
+#     command: nvm install 13.3.0 && npm install && npm start
+
 ports:
   - port: 3000
     onOpen: open-preview
 tasks:
-  - before: if [[ -z "$experiment" ]]; then cd playground/1st-proof-of-concept; else cd playground/$experiment; fi
+  - before: cd playground/first-release-becker
     command: nvm install 13.3.0 && npm install && npm start
